--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ android {
   defaultConfig {
     minSdkVersion 15
     targetSdkVersion 23
-    versionName "2.16.0"
-    versionCode 216000
+    versionName "2.16.1"
+    versionCode 216001
     resValue "string", "app_git_hash", getCurrentGitHash()
 
     multiDexEnabled true
@@ -269,7 +269,7 @@ dependencies {
 
 play {
   jsonFile = file('../gplay-secret.json')
-  track = 'production'
+  track = 'beta'
 }
 
 def (releaseKeystorePassword, releaseKeyAlias, releaseKeyPassword) = signingConfigFromFile()
