--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,16 +168,18 @@ dependencies {
     compile 'com.mikepenz:octicons-typeface:3.2.0.1@aar'
     compile 'com.mikepenz:community-material-typeface:1.3.41.1@aar'
     compile 'com.mikepenz:google-material-typeface:2.2.0.2.original@aar'
-    compile "com.mikepenz:iconics-core:2.6.6@aar"
+    compile "com.mikepenz:iconics-core:2.6.7@aar"
     compile "com.mikepenz:materialize:0.9.0@aar"
     compile('com.mikepenz:fastadapter:1.6.0@aar') {
         transitive = true
     }
     compile('com.mikepenz:aboutlibraries:5.7.1@aar') {
         transitive = true
+        exclude group: 'com.mikepenz', module: 'iconics-core'
     }
     compile('com.mikepenz:materialdrawer:5.3.4@aar') {
         transitive = true
+        exclude group: 'com.mikepenz', module: 'iconics-core'
     }
     compile('com.github.afollestad.material-dialogs:core:0.8.5.8@aar') {
         transitive = true
