--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 24
-        versionName "2.16.2"
-        versionCode 216002
+        versionName "2.16.5"
+        versionCode 216005
         resValue "string", "app_git_hash", getCurrentGitHash()
 
         multiDexEnabled true
@@ -266,7 +266,7 @@ dependencies {
 
 play {
     jsonFile = file('../gplay-secret.json')
-    track = 'beta'
+    track = 'production'
 }
 
 def (releaseKeystorePassword, releaseKeyAlias, releaseKeyPassword) = signingConfigFromFile()
