Apply spar button

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -191,6 +191,7 @@ dependencies {
         transitive = true;
     }
 
+    compile 'com.github.varunest:sparkbutton:1.0.0'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:1.7.0'
