--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -221,7 +221,11 @@
 
     <!-- [END instanceId_listener] -->
 
-    <service android:name=".account.GetNotificationsService"/>
+    <service android:name=".account.GetNotificationsJob"/>
+    <service
+        android:name=".account.GetNotificationsService"
+        android:exported="true"
+        />
   </application>
 
 </manifest>
