--- a/app/build.gradle
+++ b/app/build.gradle
@@ -258,6 +258,8 @@ dependencies {
     compile 'net.danlew:android.joda:2.8.2'
 
     compile 'nl.littlerobots.rxlint:rxlint:1.0'
+
+    compile 'com.github.chrisbanes:PhotoView:1.2.6'
 }
 
 play {
