Update to butterknife 8.2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -220,7 +220,8 @@ dependencies {
         transitive = true
     }
     compile 'com.github.pedrovgs:renderers:2.0.3'
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.jakewharton:butterknife:8.2.1'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     compile 'com.fewlaps.quitnowcache:quitnow-cache:1.4'
     compile 'com.android.support:multidex:1.0.1'
