--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 24
-        versionName "2.17.7"
-        versionCode 217007
+        versionName "2.17.8 - Beta"
+        versionCode 217008
         resValue "string", "app_git_hash", getCurrentGitHash()
 
         multiDexEnabled true
