--- a/app/build.gradle
+++ b/app/build.gradle
@@ -260,6 +260,7 @@ dependencies {
     compile 'nl.littlerobots.rxlint:rxlint:1.0'
 
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
+    compile 'com.github.javierugarte:githubcontributionsview:1.0.0'
 }
 
 play {
