--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 24
-        versionName "2.17.8 - Beta"
-        versionCode 217008
+        versionName "2.17.9"
+        versionCode 217009
         resValue "string", "app_git_hash", getCurrentGitHash()
 
         multiDexEnabled true
@@ -265,7 +265,7 @@ dependencies {
 
 play {
     jsonFile = file('../gplay-secret.json')
-    track = 'beta'
+    track = 'production'
 }
 
 def (releaseKeystorePassword, releaseKeyAlias, releaseKeyPassword) = signingConfigFromFile()
