--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ buildscript {
         classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
         classpath 'com.github.triplet.gradle:play-publisher:1.1.4'
     }
+    // Exclude the version that the android plugin depends on.
+    configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 apply plugin: 'com.android.application'
@@ -40,8 +42,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 24
-        versionName "2.17.9"
-        versionCode 217009
+        versionName "2.17.10"
+        versionCode 217010
         resValue "string", "app_git_hash", getCurrentGitHash()
 
         multiDexEnabled true
