--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,11 @@ buildscript {
     classpath 'io.fabric.tools:gradle:1.19.2'
     classpath 'com.google.gms:google-services:3.0.0'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    classpath 'me.tatarka:gradle-retrolambda:3.2.4'
+    classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
   }
+  // Exclude the version that the android plugin depends on.
+  configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 allprojects {
