--- a/.github/GITSKARIOS.yml
+++ b/.github/GITSKARIOS.yml
@@ -1,15 +1,20 @@
 - title
   - textfield
-    - max: 100
-    - multiline: false
-    - hint: Issue title
+    - max
+       - 100
+    - multiline
+       - false
+    - hint
+        - "Issue title"
 - device
   - textfield
-     - max: 100
-     - multiline: false
+     - max
+       - 100
+     - multiline 
+       - false
 - android_version:
    - selector
-      - values:
+      - values
           - android 4.3
           - android 4.4
           - android 5.0
@@ -17,4 +22,5 @@
           - android 7.0
 - content
   - textfield
-     - max: 500
+     - max
+        - 500
