--- a/.github/GITSKARIOS.yml
+++ b/.github/GITSKARIOS.yml
@@ -1,26 +1,51 @@
-- title
-  - textfield
-    - max
-       - 100
-    - multiline
-       - false
-    - hint
-        - "Issue title"
-- device
-  - textfield
-     - max
-       - 100
-     - multiline 
-       - false
-- android_version:
-   - selector
-      - values
-          - android 4.3
-          - android 4.4
-          - android 5.0
-          - android 6.0
-          - android 7.0
-- content
-  - textfield
-     - max
-        - 500
+config:
+  version: 1
+form:
+ - key: issue_type
+   type: selector
+   label: "Type of issue"
+   params:
+     values:
+      - Enhancement
+      - Bug
+      - Feature request
+      - Crash
+     mode: simple
+ - key: "title"
+   type: textfield
+   label: "Issue title"
+   params:
+    hint: "Title"
+    max: 100
+ - key: "device"
+   type: textfield
+   label: "Device"
+   params:
+    hint: "Device"
+    max: 100
+ - key: title
+   type: selector
+   label: "Select android version"
+   params:
+     values:
+      - Android 4.3
+      - Android 4.4
+      - Android 5.0
+      - Android 6.0
+     mode: simple
+ - key: "content"
+   type: textfield
+   label: "Content"
+   params:
+    hint: "Content"
+    multiline: true
+    extras:
+      emojis: true
+      images: true
+      source: true
+ - key: "status"
+   type: checkbox
+   label: "Status"
+   params:
+    hint: "Status"
+    checked: true
