--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/services/javax.annotation.processing.Processor'
+        exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
     }
 
     buildTypes {
@@ -151,6 +152,7 @@ def getImgurCallback() {
 dependencies {
     compile project(':sdks:GithubReborn')
     compile project(':imgur')
+    compile project(':yaml_form_builder')
 
     compile('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
         transitive = true;
