--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ jdk:
 android:
   components:
   - tools
-  - build-tools-24.0.0
+  - tools
+  - platform-tools
+  - build-tools-24.0.1
   - android-24
   - extra-android-m2repository
   - extra-google-google_play_services
