--- a/yaml_form_builder/build.gradle
+++ b/yaml_form_builder/build.gradle
@@ -11,11 +11,17 @@ android {
     versionName "1.0"
 
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+    lintOptions {
+      abortOnError false
+      warning 'InvalidPackage'
+    }
+
   }
   buildTypes {
     release {
       minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      proguardFiles 'proguard-rules.pro'
     }
   }
 }
