--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
   <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
   <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
   <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
-  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
   <uses-permission
       android:name="android.permission.READ_PHONE_STATE"
       tools:node="remove"
@@ -109,6 +109,10 @@
         >
     </activity>
     <activity android:name=".ui.activity.NotificationsActivity"/>
+    <activity
+        android:name=".ui.fragment.donate.DonateActivity"
+        android:label="@string/action_donate"
+        />
     <activity android:name=".ui.activity.gists.GistDetailActivity"/>
     <activity android:name=".ui.activity.gists.GistsFileActivity"/>
     <activity
@@ -222,7 +226,7 @@
         />
     <receiver android:name=".account.StartUpBootReceiver">
       <intent-filter>
-        <action android:name="android.intent.action.BOOT_COMPLETED" />
+        <action android:name="android.intent.action.BOOT_COMPLETED"/>
       </intent-filter>
     </receiver>
   </application>
