--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,10 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
+
+  configurations {
+    all*.exclude module: 'annotations'
+  }
 }
 
 // delete unaligned files
@@ -262,6 +266,8 @@ dependencies {
 
   compile 'com.github.chrisbanes:PhotoView:1.2.6'
   compile 'com.github.javierugarte:githubcontributionsview:1.2.1'
+
+  compile 'com.github.softwee:codeview-android:1.0.3'
 }
 
 play {
