--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
     <activity android:name=".ui.activity.ProfileActivity"/>
     <activity android:name=".ui.activity.CommitDetailActivity"/>
     <activity
-        android:name=".ui.activity.RepoDetailActivity"
+        android:name=".ui.activity.repo.RepoDetailActivity"
         android:exported="true"
         />
     <activity
