--- a/app/build.gradle
+++ b/app/build.gradle
@@ -193,6 +193,8 @@ dependencies {
   testCompile 'junit:junit:4.12'
   testCompile 'org.assertj:assertj-core:1.7.0'
   testCompile "org.mockito:mockito-core:1.10.19"
+  testCompile 'com.google.dagger:dagger-compiler:2.4'
+  androidTestApt 'com.google.dagger:dagger-compiler:2.4'
 
   compile 'com.maksim88:PasswordEditText:v0.8'
 
