--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ android {
 
   signingConfigs {
     release {
-      storeFile file("../app.keystore.jks")
+      storeFile file("../app.keystore.my.jks")
     }
   }
 
@@ -190,6 +190,7 @@ dependencies {
   testCompile 'junit:junit:4.12'
   testCompile 'org.assertj:assertj-core:1.7.0'
   testCompile "org.mockito:mockito-core:1.10.19"
+  testCompile 'com.squareup.retrofit2:retrofit-mock:2.0.0'
   testCompile 'com.google.dagger:dagger-compiler:2.4'
   androidTestApt 'com.google.dagger:dagger-compiler:2.4'
 
