Removed my path to keystore file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ android {
 
   signingConfigs {
     release {
-      storeFile file("../app.keystore.my.jks")
+      storeFile file("../app.keystore.jks")
     }
   }
 
