Update FCM pushes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -200,6 +200,9 @@
         android:exported="false"
         >
       <intent-filter>
+        <action android:name="com.google.firebase.MESSAGING_EVENT."/>
+      </intent-filter>
+      <intent-filter>
         <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
       </intent-filter>
     </service>
