--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
           package="com.alorma.github"
     >
 
@@ -78,6 +77,7 @@
       </intent-filter>
     </activity>
     <activity android:name=".ui.activity.ProfileActivity"/>
+    <activity android:name=".ui.activity.repo.RepositorySourceActivity"/>
     <activity android:name=".ui.activity.CommitDetailActivity"/>
     <activity
         android:name=".ui.activity.repo.RepoDetailActivity"
