--- a/app/build.gradle
+++ b/app/build.gradle
@@ -272,6 +272,7 @@ dependencies {
   compile 'com.github.javierugarte:githubcontributionsview:1.2.1'
 
   compile 'io.reactivex:rxjava-string:1.1.0'
+  compile 'com.elyeproj.libraries:loaderviewlibrary:1.2.2'
 }
 
 play {
