--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,7 @@
         android:theme="@style/AppTheme.Search"
         />
     <activity android:name=".ui.activity.FileActivity"/>
+    <activity android:name=".ui.activity.repo.RepoReleasesActivity"/>
     <activity android:name=".ui.activity.ContentCommitsActivity"/>
     <activity android:name=".ui.activity.OrganizationActivity"
         />
