Send apk to alpha

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -282,7 +282,7 @@ dependencies {
 
 play {
   jsonFile = file('../gplay-secret.json')
-  track = 'production'
+  track = 'alpha'
 }
 
 def (releaseKeystorePassword, releaseKeyAlias, releaseKeyPassword) = signingConfigFromFile()
