--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,14 @@ deploy:
   skip_cleanup: true
   on:
     branch: develop
+- provider: releases
+  api_key:
+    secure: "qoVzFmtwPKM/Te1ggabADVSV7EY1k/wcnMwJsEsg051kskKs/POQ9XO3pk2VHQm/nWaprt2eU0lVjWoBHDwLugiqhwzIBb59AP87ZINrRyxzE//6BtVaBang0eJusIkwvS0Jnnm2VmpPPu5vveDYJHG/F91HCN3iUFCgNau3sfk="
+  file: version.properties
+  on:
+    tags: true
+    repo: build/outputs/apk/*.apk
+
 notifications:
   slack:
     secure: EzftlFYHtgFuBpRsSleKtsA1PngiK/tKHw8WrFfFU69ehXvvdA1Bi5t+TBn9eFo4E5cRolrPuyMGn8HyMLYn1RFAvr3YcSPIll++92OeyV0C9Opx68aK3iCoIXuasZ0Id3By1mnjefRuQvMQShfHBe/7lbtPvip254H9QX57fl4=
