--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jdk:
 - oraclejdk8
 before_script:
 - sudo apt-get update && sudo apt-get install oracle-java8-installer
-- sh ../version_script.sh
+- ./version_script.sh
 before_install:
  - openssl aes-256-cbc -K $encrypted_7d926816f25e_key -iv $encrypted_7d926816f25e_iv
   -in secrets.tar.enc -out secrets.tar -d
@@ -38,7 +38,7 @@ android:
 script: ./gradlew build
 deploy:
 - provider: script
-  script: sh ../version_push.sh
+  script: ./version_push.sh
   skip_cleanup: true
   on:
     tags: true
