--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ deploy:
   api_key:
     secure: "qoVzFmtwPKM/Te1ggabADVSV7EY1k/wcnMwJsEsg051kskKs/POQ9XO3pk2VHQm/nWaprt2eU0lVjWoBHDwLugiqhwzIBb59AP87ZINrRyxzE//6BtVaBang0eJusIkwvS0Jnnm2VmpPPu5vveDYJHG/F91HCN3iUFCgNau3sfk="
   file: build/outputs/apk/*.apk
+  skip_cleanup: true
   on:
     tags: true
     all_branches: true
