Update travis releases file

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ deploy:
 - provider: releases
   api_key:
     secure: "qoVzFmtwPKM/Te1ggabADVSV7EY1k/wcnMwJsEsg051kskKs/POQ9XO3pk2VHQm/nWaprt2eU0lVjWoBHDwLugiqhwzIBb59AP87ZINrRyxzE//6BtVaBang0eJusIkwvS0Jnnm2VmpPPu5vveDYJHG/F91HCN3iUFCgNau3sfk="
-  file: build/outputs/apk/*.apk
+  file: "app/build/outputs/apk/app*.apk"
   skip_cleanup: true
   on:
     tags: true
