--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ deploy:
   on:
     tags: true
 - provider: script
-  script: ./gradlew publishApkRelease
+  script: ./gradlew publishListingRelease publishApkRelease
   skip_cleanup: true
   on:
     tags: true
