--- a/app/build.gradle
+++ b/app/build.gradle
@@ -278,6 +278,7 @@ dependencies {
   compile 'com.github.javierugarte:githubcontributionsview:1.2.1'
 
   compile 'io.reactivex:rxjava-string:1.1.0'
+  compile 'com.frogermcs.activityframemetrics:activityframemetrics:0.1.0'
 }
 
 play {
