--- a/app/build.gradle
+++ b/app/build.gradle
@@ -169,7 +169,7 @@ def getImgurCallback() {
 }
 
 dependencies {
-  compile('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
+  compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
     transitive = true;
   }
 
@@ -193,7 +193,7 @@ dependencies {
   compile 'com.afollestad.material-dialogs:core:0.9.0.1'
   compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
 
-  compile('com.crashlytics.sdk.android:answers:1.3.7@aar') {
+  compile('com.crashlytics.sdk.android:answers:1.3.10@aar') {
     transitive = true;
   }
 
@@ -290,6 +290,12 @@ dependencies {
 
   compile 'io.flowup:android-sdk:0.2.4'
   testCompile 'io.flowup:android-sdk-no-op:0.2.4'
+  compile('com.appsee:appsee-android:2.3@aar') {
+    transitive = true;
+  }
+  compile('io.fabric.sdk.android:fabric:1.3.6@aar') {
+    transitive = true;
+  }
 }
 
 play {
