--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
           package="com.alorma.github"
     >
 
+  <uses-sdk tools:overrideLibrary="com.frogermcs.activityframemetrics"/>
+
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -16,8 +18,6 @@
   <uses-permission android:name="com.android.vending.BILLING"/>
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
-  <uses-sdk tools:overrideLibrary="com.frogermcs.activityframemetrics" />
-
   <application
       android:name=".GitskariosApplication"
       android:allowBackup="true"
@@ -28,54 +28,57 @@
       android:sharedUserLabel="@string/app_name"
       android:theme="@style/AppTheme"
       >
-    <activity android:name=".ui.activity.MainActivity" />
-
+    <activity android:name=".ui.activity.MainActivity"/>
     <activity
         android:name=".ui.activity.SplashActivity"
-        android:theme="@style/SplashTheme">
+        android:theme="@style/SplashTheme"
+        >
       <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+        <action android:name="android.intent.action.MAIN"/>
 
-        <category android:name="android.intent.category.LAUNCHER" />
+        <category android:name="android.intent.category.LAUNCHER"/>
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
-      <meta-data android:name="android.app.shortcuts"
-                 android:resource="@xml/shortcuts" />
+
+      <meta-data
+          android:name="android.app.shortcuts"
+          android:resource="@xml/shortcuts"
+          />
     </activity>
-
-    <activity android:name=".ui.activity.shortcut.ShortcutEventsActivity"
-              android:theme="@style/SplashTheme" />
-
-    <activity android:name=".ui.activity.shortcut.ShortcutRepositoriesActivity"
-              android:theme="@style/SplashTheme" />
-
-    <activity android:name=".ui.activity.shortcut.ShortcutPeopleActivity"
-              android:theme="@style/SplashTheme" />
-
-    <activity android:name=".ui.activity.shortcut.ShortcutIssuesActivity"
-              android:theme="@style/SplashTheme" />
-
     <activity
-        android:name="com.alorma.github.ui.activity.WelcomeActivity"
+        android:name=".ui.activity.shortcut.ShortcutEventsActivity"
+        android:theme="@style/SplashTheme"
+        />
+    <activity
+        android:name=".ui.activity.shortcut.ShortcutRepositoriesActivity"
+        android:theme="@style/SplashTheme"
+        />
+    <activity
+        android:name=".ui.activity.shortcut.ShortcutPeopleActivity"
+        android:theme="@style/SplashTheme"
+        />
+    <activity
+        android:name=".ui.activity.shortcut.ShortcutIssuesActivity"
+        android:theme="@style/SplashTheme"
+        />
+    <activity
+        android:name=".ui.activity.WelcomeActivity"
         android:label="@string/app_name"
         android:launchMode="singleInstance"
         android:theme="@style/AppTheme.Welcome"
         />
-
     <activity
-        android:name="com.alorma.github.ui.activity.login.OtpCodeActivity"
+        android:name=".ui.activity.login.OtpCodeActivity"
         android:label="@string/app_name"
         android:launchMode="singleInstance"
         android:theme="@style/AppTheme.Welcome"
         />
-
     <activity
-        android:name="com.alorma.github.ui.activity.login.AlternateLoginActivity"
+        android:name=".ui.activity.login.AlternateLoginActivity"
         android:label="@string/app_name"
         android:launchMode="singleInstance"
         android:theme="@style/AppTheme.Welcome"
         />
-
     <activity
         android:name=".Interceptor"
         android:theme="@android:style/Theme.NoDisplay"
@@ -179,7 +182,7 @@
     <activity android:name=".ui.activity.ForksActivity"/>
     <activity android:name=".ui.activity.issue.RepositoryMilestonesActivity"/>
     <activity android:name=".ui.activity.issue.IssueLabelsActivity"/>
-    <!--<activity android:name=".ui.activity.SyncFavoritesActivity" />-->
+    <!-- <activity android:name=".ui.activity.SyncFavoritesActivity" /> -->
     <activity android:name=".ui.activity.MilestoneIssuesActivity"/>
     <activity
         android:name=".ui.activity.ContentEditorActivity"
@@ -220,8 +223,8 @@
     <!-- [START gcm_listener] -->
     <service
         android:name=".gcm.GitskariosGcmListenerService"
-        android:exported="true"
         android:enabled="true"
+        android:exported="true"
         >
       <intent-filter>
         <action android:name="com.google.firebase.MESSAGING_EVENT"/>
@@ -231,8 +234,8 @@
     <!-- [START instanceId_listener] -->
     <service
         android:name=".gcm.GitskariosInstanceIDListenerService"
-        android:exported="true"
         android:enabled="true"
+        android:exported="true"
         >
       <intent-filter>
         <action android:name="com.google.firebase.INSTANCEID_EVENT"/>
@@ -245,11 +248,17 @@
         android:name=".account.GetNotificationsService"
         android:exported="true"
         />
+
     <receiver android:name=".account.StartUpBootReceiver">
       <intent-filter>
         <action android:name="android.intent.action.BOOT_COMPLETED"/>
       </intent-filter>
     </receiver>
+
+    <activity
+        android:name=".ui.activity.GoodByeActivity"
+        android:label="@string/good_bye_title"
+        />
   </application>
 
 </manifest>
